--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,6 +7,30 @@
 </head>
 <body>
     <h1>Lasagna</h1>
-    <img src="../images/lasagna.jpeg" alt="Lasagna on a plate">
+    <img src="../images/lasagna.jpeg" alt="Lasagna on a plate" height="310px" width="310px">
+    <h2>How to make the perfect lasagna</h2>
+    <p>Lasagna, also known as lasagne, is a type of pasta, possibly one of the oldest types, made of very wide, flat sheets. Either term can also refer to an Italian dish made of stacked layers of lasagna alternating with fillings such as ragù (ground meats and tomato sauce), béchamel sauce, vegetables, cheeses (which may include ricotta, mozzarella, and parmesan), and seasonings and spices. The dish may be topped with grated cheese, which becomes melted during baking. Typically cooked pasta is assembled with the other ingredients and then baked in an oven. The resulting baked pasta is cut into single-serving square or rectangular portions.</p>
+    <h2>ingredients</h2>
+    <ul>
+        <li>Lasagna</li>
+        <li>Ricotta cheese</li>
+        <li>Spices</li>
+        <li>Garlic</li>
+        <li>Pasta sauce</li>
+        <li>Beef</li>
+        <li>Mozarella</li>
+        <li>Egg</li>
+        <li>Parsley</li>
+        <li>Onion</li>
+        <li>Tomato</li>
+        <li>Parmesan</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li><strong>Boil pasta:</strong> Cook in a large pot of salted water per the recipe below.</li>
+        <li><strong>Prepare meat sauce:</strong> Cook sausage and beef with onion and garlic. Drain well, add the pasta sauce & simmer it for a few minutes to thicken</li>
+        <li><strong>Combine cheese mixture:</strong> Stir the cheese mixture together in a bowl.</li>
+        <li><strong>Layer & bake:</strong> Layer the meat sauce and cheese mixture with lasagna noodles and bake until browned and bubbly.</li>
+    </ol>
 </body>
 </html>
