--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Odin Recipes</h1>
     <a href="./recipes/lasagna.html">Lasagna</a>
+    <a href="./recipes/chicken-milanese.html">Chicken Milanese</a>
 </body>
 </html>
