Added a third wabpage to the website - spaghetti

--- a/recipes/chicken-milanese.html
+++ b/recipes/chicken-milanese.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Chicken Milanese</h1>
-    <img src="../images/chicken-milanese.jpeg" alt="delicious chicken milanese on a plate">
+    <img src="../images/chicken-milanese.jpeg" alt="delicious chicken milanese on a plate" height="310px" width="310px">
     <h2>How to make the perfect Chicken Milanese</h2>
     <p>Pollo alla Milanese is delicious juicy chicken in a crispy jacket. The preparation method 'alla Milanese' also stands for breaded. A similar recipe is Scaloppina alla Milanese, the difference is that this recipe is prepared with veal fillet.</p>
     <h2>Ingredients</h2>
