--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/lasagna.html">Lasagna</a>
-    <a href="./recipes/chicken-milanese.html">Chicken Milanese</a>
+    <ul>
+        <li><a href="./recipes/lasagna.html">Lasagna</a></li>
+        <li><a href="./recipes/chicken-milanese.html">Chicken Milanese</a></li>
+        <li><a href="./recipes/spaghetti.html">Million dollar spaghetti</a></li>
+    </ul>
 </body>
 </html>
