--- a/recipes/spaghetti.html
+++ b/recipes/spaghetti.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Million dollar spaghetti</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <h1>Million dollar spaghetti</h1>
