--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <ul>
-        <li><a href="./recipes/lasagna.html">Lasagna</a></li>
-        <li><a href="./recipes/chicken-milanese.html">Chicken Milanese</a></li>
-        <li><a href="./recipes/spaghetti.html">Million dollar spaghetti</a></li>
-    </ul>
+    <div class="testing">
+        <ul class="ulHomePage">
+            <li><a href="./recipes/lasagna.html">Lasagna</a></li>
+            <li><a href="./recipes/chicken-milanese.html">Chicken Milanese</a></li>
+            <li><a href="./recipes/spaghetti.html">Million dollar spaghetti</a></li>
+        </ul>
+    </div>
+        
 </body>
 </html>
